--- a/WPFTodoList/App.xaml
+++ b/WPFTodoList/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="WPFTodoList.App"
+﻿<prism:PrismApplication x:Class="WPFTodoList.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFTodoList"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
