--- a/WPFTodoList/Views/ShellWindow.xaml
+++ b/WPFTodoList/Views/ShellWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WPFTodoList.MainWindow"
+﻿<Window x:Class="WPFTodoList.Views.ShellWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFTodoList"
+        xmlns:local="clr-namespace:WPFTodoList.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="ShellWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock Text="Hello World!" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
     </Grid>
 </Window>
