--- a/WPFTodoList/Views/ShellWindow.xaml
+++ b/WPFTodoList/Views/ShellWindow.xaml
@@ -3,10 +3,57 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFTodoList.Views"
+        xmlns:prism="http://prismlibrary.com/"
         mc:Ignorable="d"
-        Title="ShellWindow" Height="450" Width="800">
+        Title="{ Binding Path=Title }" 
+        Height="450" 
+        Width="800"
+        MinWidth="500" 
+        MinHeight="300"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBlock Text="Hello World!" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="{ Binding Path=Title }" 
+                   Padding="10" 
+                   Background="DodgerBlue" 
+                   Foreground="White" 
+                   FontSize="18" />
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" 
+                                  MinWidth="120" 
+                                  MaxWidth="200" />
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
+
+            <Grid Background="LightGray">
+                <ListView Background="Transparent"
+                          BorderThickness="0, 0, 1, 0"
+                          SelectedIndex="0">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{ x:Type ListViewItem }">
+                            <Style.Setters>
+                                <Setter Property="Padding" 
+                                        Value="4" />
+                                <Setter Property="Cursor"
+                                        Value="Hand" />
+                            </Style.Setters>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListViewItem>Home</ListViewItem>
+                    <ListViewItem>Todos</ListViewItem>
+                    <ListViewItem>About</ListViewItem>
+                </ListView>
+            </Grid>
+
+            <Grid Grid.Column="1">
+                <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
