--- a/WPFTodoList/Views/TodosView.xaml
+++ b/WPFTodoList/Views/TodosView.xaml
@@ -6,6 +6,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Todos" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <ListView Background="Transparent"
+                  BorderThickness="0"
+                  ItemsSource="{ Binding Path=Todos }"
+                  DisplayMemberPath="Title" />
     </Grid>
 </UserControl>
