--- a/WPFTodoList/Views/Navigation.xaml
+++ b/WPFTodoList/Views/Navigation.xaml
@@ -15,7 +15,8 @@
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction Command="{ Binding Path=NavigateCommand }"
-                                           CommandParameter="{ Binding Path=SelectedItem, RelativeSource={ RelativeSource AncestorType={ x:Type ListView }}}" />
+                                           CommandParameter="{ Binding Path=SelectedItem, 
+                                                                       RelativeSource={ RelativeSource AncestorType={ x:Type ListView }}}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <ListView.ItemContainerStyle>
