--- a/WPFTodoList/Dialogs/Views/AddTodoDialog.xaml
+++ b/WPFTodoList/Dialogs/Views/AddTodoDialog.xaml
@@ -8,10 +8,27 @@
              d:DesignWidth="800"
              Width="300"
              Height="200">
-    <Grid>
-        <TextBlock Text="Add Todo"
-                   FontSize="18"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Vertical">
+            <Label Content="Todo:" />
+            <TextBox Margin="0, 2" 
+                     Padding="4"
+                     Text="{ Binding NewTodo.Title }" />
+        </StackPanel>
+
+        <DockPanel Grid.Row="2"
+                   LastChildFill="False">
+            <Button DockPanel.Dock="Right"
+                    Content="Add"
+                    Padding="4"
+                    MinWidth="70"
+                    Command="{ Binding Path=AddCommand }" />
+        </DockPanel>
     </Grid>
 </UserControl>
