--- a/WPFTodoList/Views/TodosView.xaml
+++ b/WPFTodoList/Views/TodosView.xaml
@@ -8,6 +8,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450"
              d:DesignWidth="800">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -134,7 +137,8 @@
             </ListView.GroupStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <DockPanel Margin="4">
+                    <DockPanel Margin="4"
+                               Height="30">
                         <CheckBox DockPanel.Dock="Left" 
                                   IsChecked="{ Binding Path=IsCompleted }"
                                   Margin="0, 0, 4, 0"
@@ -154,7 +158,8 @@
                         </CheckBox>
 
                         <StackPanel DockPanel.Dock="Right"
-                                    Orientation="Horizontal">
+                                    Orientation="Horizontal"
+                                    Visibility="{ Binding Path=IsSelected, RelativeSource={ RelativeSource AncestorType={ x:Type ListViewItem }}, Converter={ StaticResource BooleanToVisibilityConverter }}">
                             <Button Background="Transparent"
                                     BorderThickness="0"
                                     Width="25"
